--- a/deno.json
+++ b/deno.json
@@ -1,12 +1,15 @@
 {
+	"name": "@arm/sudoku",
+	"version": "0.1.0",
+	"license": "MIT",
+	"exports": {
+		"./board": "./board.ts",
+		"./dfs_prune": "./dfs_prune.ts"
+	},
 	"tasks": {
 		"dev": "deno run --watch main.ts"
 	},
 	"imports": {
 		"@std/assert": "jsr:@std/assert@1"
-	},
-	"lib": [
-		"deno.ns",
-		"deno.shared_globals"
-	]
+	}
 }
