--- a/deno.json
+++ b/deno.json
@@ -7,7 +7,8 @@
 		"./dfs_prune": "./dfs_prune.ts"
 	},
 	"tasks": {
-		"dev": "deno run --watch main.ts"
+		"dev": "deno run --watch main.ts",
+		"wasmbuild": "deno run -A jsr:@deno/wasmbuild@0.19"
 	},
 	"imports": {
 		"@std/assert": "jsr:@std/assert@1"
