--- a/deno.json
+++ b/deno.json
@@ -1,9 +1,9 @@
 {
 	"name": "@arm/sudoku",
-	"version": "1.0.1",
+	"version": "1.1.1",
 	"license": "MIT",
 	"exports": {
-		".": "./mod.js"
+		".": "./mod.ts"
 	},
 	"tasks": {
 		"dev": "deno run --watch main.ts",
